external-crates/move/crates/move-package-alt/tests/data/manifest_parsing_invalid/non_identifier_address_name_in_subst/Move.snap
---
source: crates/move-package-alt/tests/manifest_parsing_tests.rs
---
TOML parse error at line 6, column 34
  |
6 | A = { local = "a", rename-from = { "©" = "A" } }
  |                                  ^^^^^^^^^^^^^^
invalid type: map, expected a string
